<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView_nombre"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:paddingLeft="30sp"
        android:text="@string/nombre"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_orange_light"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@android:color/holo_orange_light"
                    android:drawableLeft="@drawable/celular"
                    android:text="@string/A"

                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="139dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_orange_light"
                    android:drawableLeft="@drawable/lapzz"
                    android:text="@string/B"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etTitulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:paddingLeft="30dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="163dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_light"
                    android:drawableLeft="@drawable/ampolleta"
                    android:text="@string/C"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:inputType="textMultiLine" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="184dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_orange_light"
                    android:drawableLeft="@drawable/yyy"
                    android:text="@string/D"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10" />

            </LinearLayout>


            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_light"
                android:drawableBottom="@drawable/google"
                android:gravity="center"
                android:onClick="google"
                android:text="@string/boton6" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="426dp"
                android:layout_height="54dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/txt_ejemplo"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary"
                android:textSize="24dp" />

            <EditText
                android:id="@+id/txt_web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/txt_web"
                android:inputType="textPersonName"
                android:textColorHint="@color/colorPrimary"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/googles"
                android:onClick="Navegar"
                android:text="@string/BotonIR"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnGmail"
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/gmail"
                android:onClick="gmail"
                android:text="@string/Gmail"
                android:textSize="14sp" />
            <Button
                android:id="@+id/btnRegistro"
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_action_registro"
                android:onClick="registro"
                android:text="@string/registro"
                android:textSize="14sp" />


            <Button
                android:id="@+id/btsheet_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ajustes"
                android:onClick="App"
                android:text="@string/App"
                android:textSize="14sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_orange_dark"
                    android:drawableLeft="@drawable/mes"
                    android:text="@string/E"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etAño"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_margin="10dp"
                android:layout_weight="0.05"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@android:color/holo_orange_dark"
                    android:drawableLeft="@drawable/ano"
                    android:text="@string/F"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spMes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textview3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_orange_dark"
                    android:drawableLeft="@drawable/dia"
                    android:text="@string/G"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etDia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chkDuracion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:text="@string/H"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@android:color/holo_orange_light"
                    android:drawableLeft="@drawable/reloj"
                    android:text="@string/I"

                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spHora"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:padding="10sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@android:color/holo_orange_light"
                    android:drawableLeft="@drawable/minuto"
                    android:text="@string/J"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etMinuto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnAnadir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/smartphone"
                    android:onClick="Agregar"
                    android:text="@string/K" />


            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</LinearLayout>