<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/avion"
    android:paddingRight="30dp"
    android:id="@+id/contenedor"
    tools:context=".mapa">

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="270dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp">

        <Button
            android:id="@+id/btn_Sitios"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:drawableRight="@drawable/sitios"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/boton1" />

        <Button
            android:id="@+id/btn_Tipo"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:background="@android:color/holo_orange_dark"
            android:drawableRight="@drawable/europa"
            android:gravity="center"
            android:onClick="MapaStios"
            android:text="@string/boton2" />

        <Button
            android:id="@+id/btn_Ubicacion"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:background="@color/colorPrimary"
            android:drawableRight="@drawable/google"
            android:gravity="center"
            android:onClick="MapaUbicacion"
            android:text="@string/boton3" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="230dp"
        android:layout_height="242dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/map"
        tools:ignore="MissingConstraints" />
</android.support.constraint.ConstraintLayout>